--- a/index.ipynb
+++ b/index.ipynb
@@ -57,13 +57,18 @@
     "            return self.__class__(x, y, self.a, self.b)\n",
     "\n",
     "        # Case 3: self.x == other.x, self.y == other.y\n",
+    "        if self.x == other.x and self.y == other.y:\n",
     "        # Formula (x3,y3)=(x1,y1)+(x1,y1)\n",
     "        # s=(3*x1**2+a)/(2*y1)\n",
+    "            s = (3*self.x**2 + self.a) / (2 * self.y)\n",
     "        # x3=s**2-2*x1\n",
+    "            x = s**2 - 2*self.x\n",
     "        # y3=s*(x1-x3)-y1\n",
+    "            y = s*(self.x - x) - self.y\n",
     "        # Remember to return an instance of this class:\n",
     "        # self.__class__(x, y, a, b)\n",
-    "        pass"
+    "            return self.__class__(x, y, self.a, self.b)\n",
+    "       "
    ]
   }
  ],
@@ -83,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
